<resources>
    <string name="app_name">mp3world</string>

    <!-- main title name -->
    <string name="my_songs">Мои песни</string>
    <string name="my_playlists">Мои плейлисты</string>
    <string name="artists">Исполнители</string>
    <string name="albums">Альбомы</string>
    <string name="favourites">Избранное</string>

    <string name="player_transition" translatable="false">player_transition</string>

    <!-- different screen states -->
    <string name="loading">Загрузка</string>
    <string name="nothing_found">Ничего не найдено</string>

    <!-- local playlists functionality -->
    <string name="modify_compositions">Изменить композиции</string>
    <string name="add_songs">Добавить композиции</string>
    <string name="no_playlists">@string/add_playlist</string>
    <string name="create">Создать</string>
    <string name="no_songs">Нет песен</string>
    <string name="add_playlist">Создать плейлист</string>
    <string name="enter_name">введите название</string>
    <string name="delete_playlist_message">Удалить плейлист %1$s?</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="changes_will_be_discarded">Изменения не будут сохранены. Продолжить?</string>
    <string name="string_continue">Продолжить</string>
    <string name="confirm_changes">Сохранить изменения</string>

    <!-- albums functionality -->
    <string name="no_albums">Нет альбомов</string>
    <string name="go_to_album">Перейти к альбому %1$s</string>

    <!-- artists functionality -->
    <string name="no_artists">Нет исполнителей</string>
    <string name="go_to_artist">Перейти к исполнителю %1$s</string>

    <!-- favourites functionality -->
    <string name="add_to_favourites">Добавить в избранное</string>
    <string name="remove_from_favourites">Удалить из избранного</string>

    <!-- generic local song dialog texts -->
    <string name="song_description">%1$s - %2$s</string>
    <string name="download_song">Загрузить песню %1$s - %2$s</string>
    <string name="confirm">Ок</string>

    <!-- downloading functionality -->
    <string name="download_started">Загрузка начата</string>
    <string name="download_finished">%1$s - %2$s загружено</string>
    <string name="error">Ошибка</string>
    <string name="foreground_idle_title">В ожидании музыки</string>
</resources>